--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
            <button>La</button>
            <button>La#</button>
            <button>Si</button>
+           <button>No</button>
+           <button>Tal vez</button>
           
         <script type="javascript" src="app.js"> </script>
     </body>
